--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "db",
   "port": 5432,
-  "username": "postgres",
-  "database": "db",
+  "username": "admin",
+  "database": "admin",
   "entities": ["src/entities/*.ts"],
   "synchronize": true,
   "logging": true,
