--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:13.7
+FROM node:14.18
 
 RUN npm i -g @nestjs/cli
 
-WORKDIR /backend
-COPY package*.json /backend/
+WORKDIR /usr/app
+COPY ../package*.json /usr/app
 
-RUN npm i
-CMD [ "npm", "run", "start:dev"]
+RUN npm ci
+# CMD npm run seed:run && npm run start:dev
+CMD npm run start:dev 
